---------------------------------------------------------------------------------------------------
Version: 0.1.17
Date: 11. 9. 2018
  Fixed:
    - Fixed science fluids and there barrels not showing up correctly in the signal menu
---------------------------------------------------------------------------------------------------
Version: 0.1.16
Date: 10. 8. 2018
  Modding:
    - Added support for the Lumberjack mod
---------------------------------------------------------------------------------------------------
Version: 0.1.15
Date: 6. 8. 2018
  Modding:
    - Added support for the corpse flare mod
    - Added support for the logicarts mod
    - Added support for the vehicle wagon mod
---------------------------------------------------------------------------------------------------
Version: 0.1.14
Date: 3. 8. 2018
  Balancing:
    - Logistics 2 research doesn't require basic logistics science pack anymore, downgraded to basic automation science pack
    - automobilism research doesn't require basic logistics science pack anymore, downgraded to basic automation science pack
    - stack inserter research doesn't require basic logistics science pack anymore, downgraded to basic power science pack
---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: 2. 8. 2018
  Modding:
    - Added support for the QoL mod
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 11. 7. 2018
  Changes:
    - Extended library functionality on technology: disable existing tech
    - Extended library functionality on recipe: set crafting category
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 5. 7. 2018
  Fixed:
    - Lib function setResultCount didn't work as intended
---------------------------------------------------------------------------------------------------