@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.17
 Date: 11. 9. 2018
+  Changes:
+    - Changed colors of some barrels and color of military science fluid to match the bottled version
   Fixed:
     - Fixed science fluids and there barrels not showing up correctly in the signal menu
 ---------------------------------------------------------------------------------------------------
